--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -47,7 +47,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="userPortalsDropdown">
                         <li>
-                            <a class="dropdown-item" href="/client-login" data-toggle = "modal" data-target = "#myModal">Profile</a>
+                            <a class="dropdown-item" href="{% url 'user_app:profile_view' %}">Profile</a>
                         </li>
                         <li>
                             <a class="dropdown-item" href="/establishments-login">Establishment Portal</a>
@@ -96,7 +96,9 @@
         </div>
     </nav>
     <!-- Navbar -->
+
 <!-- Modal -->
+{% csrf_token %}
   <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
     
@@ -107,12 +109,22 @@
           <h4 class="modal-title">Modal Header</h4>
         </div>
         <div class="modal-body">
-          <label class="label" for="Name">Name</label>
+          <label class="label" for="firstname">First Name</label>
+          <input name="name" type="text" class="form-control" >
+          <label class="label" for="lastname">Lastname</label>
+          <input name="name" type="text" class="form-control" >
+          <label class="label" for="username">Username</label>
+          <input name="name" type="text" class="form-control" >
+          <label class="label" for="email">Email</label>
+          <input name="name" type="text" class="form-control" >
+          <label class="label" for="address">Address</label>
           <input name="name" type="text" class="form-control" >
 
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal"style="background-color: yellow;">Update</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal"style="background-color: yellow;">Close</button>
+
         </div>
       </div>
       
