--- a/static/css/core-style.css
+++ b/static/css/core-style.css
@@ -1471,6 +1471,13 @@ img {
   flex-direction: column;
   font-size: 90%;
 }
+.nav-link.user-profile {
+  padding: 5px 20px;
+}
+.nav-link.user-profile > i {
+  font-size: 2.5rem;
+  margin-bottom: 0;
+}
 .nav-link > i {
   margin-bottom: 10px;
   margin-right: 0;
