--- a/templates/layout/footer.html
+++ b/templates/layout/footer.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load extras %}
     </div>
     <!-- ##### Main Content Wrapper End ##### -->
 
@@ -97,8 +98,8 @@
                                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#footerNavContent" aria-controls="footerNavContent" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
                                 <div class="collapse navbar-collapse" id="footerNavContent">
                                     <ul class="navbar-nav ml-auto">
-                                        <li class="nav-item active">
-                                            <a class="nav-link" href="index.html">Home</a>
+                                        <li class="nav-item {% active '/home' 'active' %}">
+                                            <a class="nav-link" href="{% url 'user_app:home_view' %}">Home</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="shop.html">Shop</a>
