--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
         <!-- Single Catagory -->
         <div class="single-products-catagory clearfix">
             <a href="shop.html">
-                <img src="{% static 'img/product1.jpg' %}" alt="">
+                <img src="{% static 'img/books.jpg' %}" alt="">
                 <!-- Hover Content -->
                 <div class="hover-content">
                     <div class="line"></div>
@@ -23,7 +23,7 @@
         <!-- Single Catagory -->
         <div class="single-products-catagory clearfix">
             <a href="shop.html">
-                <img src="{% static 'img/product1.jpg' %}" alt="">
+                <img src="{% static 'img/phones.jpg' %}" alt="">
                 <!-- Hover Content -->
                 <div class="hover-content">
                     <div class="line"></div>
@@ -36,7 +36,7 @@
         <!-- Single Catagory -->
         <div class="single-products-catagory clearfix">
             <a href="shop.html">
-                <img src="{% static 'img/product1.jpg' %}" alt="">
+                <img src="{% static 'img/laptop.jpg' %}" alt="">
                 <!-- Hover Content -->
                 <div class="hover-content">
                     <div class="line"></div>
@@ -49,7 +49,7 @@
         <!-- Single Catagory -->
         <div class="single-products-catagory clearfix">
             <a href="shop.html">
-                <img src="{% static 'img/product1.jpg' %}" alt="">
+                <img src="{% static 'img/arts.jpg' %}" alt="">
                 <!-- Hover Content -->
                 <div class="hover-content">
                     <div class="line"></div>
@@ -62,12 +62,12 @@
         <!-- Single Catagory -->
         <div class="single-products-catagory clearfix">
             <a href="shop.html">
-                <img src="{% static 'img/product1.jpg' %}" alt="">
+                <img src="{% static 'img/supplies.jpg' %}" alt="">
                 <!-- Hover Content -->
                 <div class="hover-content">
                     <div class="line"></div>
                     <!--<p>From $18</p>-->
-                    <h4>Study Supplies</h4>
+                    <h4>School Supplies</h4>
                 </div>
             </a>
         </div>
@@ -75,7 +75,7 @@
         <!-- Single Catagory -->
         <div class="single-products-catagory clearfix">
             <a href="shop.html">
-                <img src="{% static 'img/product1.jpg' %}" alt="">
+                <img src="{% static 'img/ball.jpg' %}" alt="">
                 <!-- Hover Content -->
                 <div class="hover-content">
                     <div class="line"></div>
