--- a/templates/profile.html
+++ b/templates/profile.html
@@ -74,7 +74,7 @@
                         <div class="form-group mb-3">
                           <label
                             for="description"
-                            >Description</label
+                            >Address</label
                           >
                           <textarea
                             class="form-control validate"
