--- a/templates/profile.html
+++ b/templates/profile.html
@@ -20,7 +20,7 @@
                         </span> 
                     </div> -->
                     <div class="px-2 rounded mt-2 mb-2 date"> 
-                        <span class="join">Joined May,2021</span> 
+                        <span class="join">Joined May 2021</span> 
                     </div>
                     <form class="w-100 mt-3">
                         <div class="row">
@@ -52,119 +52,8 @@
                         <a href="{% url 'user_app:edit_profile_view' %}" class="edit-btn btn btn-sm btn-outline-light">Edit Profile</a> 
                     </div>
                 </div>
-<!-- Product Catagories Area Start -->
-<!-- <div class="products-catagories-area clearfix">
-    <div class="amado-pro-catagory clearfix">
-        <div class="container tm-mt-big tm-mb-big">
-            <div class="row">
-              <div class="col-xl-9 col-lg-10 col-md-12 col-sm-12 mx-auto">
-                <div class="tm-bg-primary-dark tm-block tm-block-h-auto">
-                  <div class="row">
-                    <div class="col-12">
-                      <h2 class="tm-block-title d-inline-block">User Information</h2>
-                    </div>
-                  </div>
-                  <div class="row tm-edit-product-row">
-                    <div class="col-xl-6 col-lg-6 col-md-12">
-                      <form method="POST" action="" class="tm-edit-product-form">
-                        {% csrf_token %}
-                        <div class="form-group mb-3">
-                          <label
-                            for="name"
-                            >First Name
-                          </label>
-                          <input
-                            id="name"
-                            name="product_name"
-                            type="text"
-                            class="form-control validate"
-                            required
-                          />
-                        </div>
-                        <div class="form-group mb-3">
-                          <label
-                            for="name"
-                            >LastName
-                          </label>
-                          <input
-                            id="name"
-                            name="product_name"
-                            type="text"
-                            class="form-control validate"
-                            required
-                          />
-                        </div>
-                        <div class="form-group mb-3">
-                          <label
-                            for="name"
-                            >User Name
-                          </label>
-                          <input
-                            id="name"
-                            name="product_name"
-                            type="text"
-                            class="form-control validate"
-                            required
-                          />
-                        </div>
-                        <div class="form-group mb-3">
-                          <label
-                            for="new_category"
-                            >Email
-                          </label>
-                          <input
-                            id="new_category"
-                            name="new_category"
-                            type="text"
-                            class="form-control validate"
-                            required
-                          />
-                        </div>
-                        <div class="form-group mb-3">
-                          <label
-                            for="description"
-                            >Address</label
-                          >
-                          <textarea
-                            class="form-control validate"
-                            name="description"
-                            rows="3"
-                            required
-                          ></textarea>
-                        </div>
-                    </div>
-                    <div class="col-xl-6 col-lg-6 col-md-12 mx-auto mb-4">
-                      <div class="tm-product-img-dummy mx-auto">
-                        <i
-                          class="fas fa-cloud-upload-alt tm-upload-icon"
-                          onclick="document.getElementById('fileInput').click();"
-                        ></i>
-                      </div>
-                      <div class="custom-file mt-3 mb-3">
-                        <input name="images" id="fileInput" type="file" multiple class="btn btn-primary btn-block mx-auto"
-                        value="UPLOAD PRODUCT IMAGE" />
-                        <!-- <input
-                          type="button"
-                          class="btn btn-primary btn-block mx-auto"
-                          value="UPLOAD PRODUCT IMAGE"
-                          onclick="document.getElementById('fileInput').click();"
-                        /> -->
-                      </div>
-                    </div>
-                    <div class="col-12 mt-4">
-                      <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Update Information</button>
-                    </div>
-                  </form>
-              </div>
-                </div>
-              </div>
             </div>
         </div>
     </div>
-</div> -->
-
-
-<!-- Product Catagories Area End -->
-
-
+</div>
 {% endblock content %}
