--- a/templates/profile.html
+++ b/templates/profile.html
@@ -27,8 +27,8 @@
                         <div class="row">
                             <div class="col">
                               <div class="form-group mb-3">
-                                <label class="label text-secondary h6 small mb-0" for="firstname">{{user.first_name}}</label>
-                                <div>Jboy</div>
+                                <label class="label text-secondary h6 small mb-0" for="firstname">First Name</label>
+                                <div>{{user.first_name}}</div>
                               </div>
                             </div>
                             <div class="col">
