--- a/templates/profile.html
+++ b/templates/profile.html
@@ -21,13 +21,14 @@
                         </span> 
                     </div> -->
                     <div class="px-2 rounded mt-2 mb-2 date"> 
-                        <span class="join">Joined {{user.date_joined}}</span> 
+                        <span class="join">Joined {{user.date_joined}} {{user.id}}</span> 
                     </div>
                     <form class="w-100 mt-3">
                         <div class="row">
                             <div class="col">
                               <div class="form-group mb-3">
                                 <label class="label text-secondary h6 small mb-0" for="firstname">First Name</label>
+                                
                                 <div>{{user.first_name}}</div>
                               </div>
                             </div>
@@ -41,11 +42,13 @@
                         <div class="form-group mb-3">
                             <label class="label text-secondary h6 small mb-0" for="email">Email Address</label>
                             <div>{{user.email}}</div>
+                            <input type="number" name="user-id" value = {{user.id}} hidden>
                         </div>
                         <div class="form-group mb-3">
                           <div class="form-group mb-3">
                             <label class="label text-secondary h6 small mb-0" for="address">Address</label>
                             <div>{{address.street}} {{address.brgy}} {{user.cityprovince}} {{user.zipcode}}</div>
+
                         </div>
                         </div>
                        
