--- a/templates/products.html
+++ b/templates/products.html
@@ -90,7 +90,7 @@
                         <div class="product-img">
                             <img src="{{product.image.url}}" alt=""> <!-- {% static 'img/product1.jpg' %} -->
                             <!-- Hover Thumb -->
-                            <img class="hover-img" src="{% static 'img/product2.jpg' %}" alt="">
+                            <img class="hover-img" src="{% static 'images/clothes1.jpg' %}" alt="">
                         </div>
 
                         <!-- Product Description -->
