--- a/templates/profile.html
+++ b/templates/profile.html
@@ -21,7 +21,7 @@
                         </span> 
                     </div> -->
                     <div class="px-2 rounded mt-2 mb-2 date"> 
-                        <span class="join">Joined {{user.date_joined}} {{user.id}}</span> 
+                        <span class="join">Joined {{user.date_joined}}</span> 
                     </div>
                     <form class="w-100 mt-3">
                         <div class="row">
